--- a/kafka1-deployment.yaml
+++ b/kafka1-deployment.yaml
@@ -1,63 +1,57 @@
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: kafka-broker
+  name: kafka-service
+spec:
+  type: NodePort
+  ports:
+    - port: 9092
+      nodePort: 30100
+  selector:
+    app: kafka-broker
+# status:
+#   loadBalancer: {}
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f zk-single-kafka-single.yml
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
   labels:
-    io.kompose.service: kafka1
-  name: kafka1
+    app: kafka-broker
+  name: kafka-broker
+  # namespace: kafka
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: kafka1
-  strategy: {}
+      app: kafka-broker
+  # strategy: {}
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose convert -f zk-single-kafka-single.yml
-        kompose.version: 1.26.0 (40646f47)
-      creationTimestamp: null
       labels:
-        io.kompose.service: kafka1
+        app: kafka-broker
     spec:
+      hostname: kafka-broker
       containers:
-        - env:
-            - name: KAFKA_ADVERTISED_LISTENERS
-              value: INTERNAL://kafka1:19092,EXTERNAL://127.0.0.1:9092,DOCKER://host.docker.internal:29092
-            - name: KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND
-              value: "true"
-            - name: KAFKA_AUTHORIZER_CLASS_NAME
-              value: kafka.security.authorizer.AclAuthorizer
-            - name: KAFKA_BROKER_ID
-              value: "1"
-            - name: KAFKA_INTER_BROKER_LISTENER_NAME
-              value: INTERNAL
-            - name: KAFKA_JMX_HOSTNAME
-              value: 127.0.0.1
-            - name: KAFKA_JMX_PORT
-              value: "9999"
-            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
-              value: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
-            - name: KAFKA_LOG4J_LOGGERS
-              value: kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO
-            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
-              value: "1"
-            - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
-              value: "1"
-            - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
-              value: "1"
-            - name: KAFKA_ZOOKEEPER_CONNECT
-              value: zoo1:2181
-          image: confluentinc/cp-kafka:7.3.2
-          name: kafka1
+        - image: wurstmeister/kafka
+          imagePullPolicy: IfNotPresent
+          name: kafka-broker
           ports:
             - containerPort: 9092
-            - containerPort: 29092
-            - containerPort: 9999
-          resources: {}
-      hostname: kafka1
-      restartPolicy: Always
-status: {}
+          env:
+            - name: KAFKA_BROKER_ID
+              value: "1"
+            - name: KAFKA_ZOOKEEPER_CONNECT
+              value: 10.96.62.210:2181
+            - name: KAFKA_LISTENERS
+              value: PLAINTEXT://:9092
+            - name: KAFKA_ADVERTISED_LISTENERS
+              value: PLAINTEXT://kafka-service:9092
+          resources:
+                limits:
+                  memory: 1Gi
+                  cpu: "2"
+                requests:
+                  memory: 512Mi
+                  cpu: "0.5"
