--- a/zoo1-service.yaml
+++ b/zoo1-service.yaml
@@ -1,19 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f zk-single-kafka-single.yml
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
   labels:
-    io.kompose.service: zoo1
-  name: zoo1
+    app: zookeeper-service
+  name: zookeeper-service
+  # namespace: kafka
 spec:
+  type: NodePort
   ports:
-    - name: "2181"
+    - name: zookeeper-port
       port: 2181
+      nodePort: 30181
       targetPort: 2181
   selector:
-    io.kompose.service: zoo1
-status:
-  loadBalancer: {}
+    app: zookeeper
+# status:
+#   loadBalancer: {}
